third_party/WebKit/Source/core/dom/SelectorQueryTest.cpp
@@ -6,6 +6,7 @@
 
 #include "core/css/parser/CSSParser.h"
 #include "core/dom/Document.h"
+#include "core/html/HTMLDocument.h"
 #include "core/html/HTMLHtmlElement.h"
 #include "testing/gtest/include/gtest/gtest.h"
 #include <memory>
@@ -34,6 +35,24 @@ TEST(SelectorQueryTest, NotMatchingPseudoElement) {
   query = SelectorQuery::adopt(std::move(selectorList));
   elm = query->queryFirst(*document);
   EXPECT_NE(nullptr, elm);
+}
+
+TEST(SelectorQueryTest, LastOfTypeNotFinishedParsing) {
+  Document* document = HTMLDocument::create();
+  HTMLHtmlElement* html = HTMLHtmlElement::create(*document);
+  document->appendChild(html);
+  document->documentElement()->setInnerHTML(
+      "<body><p></p><p id=last></p></body>", ASSERT_NO_EXCEPTION);
+
+  document->body()->beginParsingChildren();
+
+  CSSSelectorList selectorList = CSSParser::parseSelector(
+      CSSParserContext(*document, nullptr), nullptr, "p:last-of-type");
+  std::unique_ptr<SelectorQuery> query =
+      SelectorQuery::adopt(std::move(selectorList));
+  Element* elm = query->queryFirst(*document);
+  ASSERT_TRUE(elm);
+  EXPECT_EQ("last", elm->idForStyleResolution());
 }
 
 }  // namespace blink
